regen swagger
