# lib/transport/v2_endpoints.go
@@ -23,23 +23,23 @@ func RegisterV2Endpoints(svc *service.LndhubService, e *echo.Echo, secured *echo
 	if svc.Config.AdminToken != "" {
 		e.PUT("/v2/admin/users", v2controllers.NewUpdateUserController(svc).UpdateUser, strictRateLimitMiddleware, adminMw)
 	}
-	invoiceCtrl := v2controllers.NewInvoiceController(svc)
-	keysendCtrl := v2controllers.NewKeySendController(svc)
+	// invoiceCtrl := v2controllers.NewInvoiceController(svc)
+	// keysendCtrl := v2controllers.NewKeySendController(svc)
 	nostrEventCtrl := v2controllers.NewNostrController(svc)
 
 	// NOSTR EVENT Request - single endpoint that takes Nostr Events
-	e.POST("/v2/event", nostrEventCtrl.HandleNostrEvent)
+	e.POST("/v2/event", nostrEventCtrl.HandleNostrEvent, strictRateLimitMiddleware, logMw)
 	// REST Tahub actions with nostr abstracted
-	secured.GET("/v2/balances/all", v2controllers.NewBalanceController(svc).Balances)
-	secured.POST("/v2/create-address", v2controllers.NewAddressController(svc).CreateAddress)
-	secured.POST("/v2/transfer", v2controllers.NewTransferController(svc).Transfer)
-	
-	secured.POST("/v2/invoices", invoiceCtrl.AddInvoice)
-	secured.GET("/v2/invoices/incoming", invoiceCtrl.GetIncomingInvoices)
-	secured.GET("/v2/invoices/outgoing", invoiceCtrl.GetOutgoingInvoices)
-	secured.GET("/v2/invoices/:payment_hash", invoiceCtrl.GetInvoice)
-	securedWithStrictRateLimit.POST("/v2/payments/bolt11", v2controllers.NewPayInvoiceController(svc).PayInvoice)
-	securedWithStrictRateLimit.POST("/v2/payments/keysend", keysendCtrl.KeySend)
-	securedWithStrictRateLimit.POST("/v2/payments/keysend/multi", keysendCtrl.MultiKeySend)
-	secured.GET("/v2/balance/:asset_id", v2controllers.NewBalanceController(svc).Balance)
+	secured.GET("/v2/balances/all", v2controllers.NewBalanceController(svc).Balance, strictRateLimitMiddleware, logMw)
+	secured.POST("/v2/create-address", v2controllers.NewAddressController(svc).CreateAddress, strictRateLimitMiddleware, logMw)
+	secured.POST("/v2/transfer", v2controllers.NewTransferController(svc).Transfer, strictRateLimitMiddleware, logMw)
+
+	// secured.POST("/v2/invoices", invoiceCtrl.AddInvoice)
+	// secured.GET("/v2/invoices/incoming", invoiceCtrl.GetIncomingInvoices)
+	// secured.GET("/v2/invoices/outgoing", invoiceCtrl.GetOutgoingInvoices)
+	// secured.GET("/v2/invoices/:payment_hash", invoiceCtrl.GetInvoice)
+	// securedWithStrictRateLimit.POST("/v2/payments/bolt11", v2controllers.NewPayInvoiceController(svc).PayInvoice)
+	// securedWithStrictRateLimit.POST("/v2/payments/keysend", keysendCtrl.KeySend)
+	// securedWithStrictRateLimit.POST("/v2/payments/keysend/multi", keysendCtrl.MultiKeySend)
+	// secured.GET("/v2/balance/:asset_id", v2controllers.NewBalanceController(svc).Balance)
 }
